@@ -46,6 +46,7 @@ export(soundgen_app)
 export(spectrogram)
 export(spectrogramFolder)
 export(ssm)
+export(transplantEnv)
 export(transplantFormants)
 import(grDevices)
 import(graphics)
