@@ -1,4 +1,6 @@
           CHANGES IN SOUNDGEN VERSION 1.5.1.9000 [...date...]
+NEW FUNCTIONS:
+  * transplantEnv(): transplants the amplitude envelope from one sound to another
 
 MINOR:
   * pitch_app(): choose summary function
